Fix EZP-24214: Incorrect Finnish country name translation: Suomi (ezcountry datatype)

--- a/share/locale/fin-FI.ini
+++ b/share/locale/fin-FI.ini
@@ -178,7 +178,7 @@ Countries[EH]=Länsi-Sahara
 Countries[ER]=Eritrea
 Countries[ES]=Espanja
 Countries[ET]=Etiopia
-Countries[FI]=Suomen Tasavalta
+Countries[FI]=Suomi
 Countries[FJ]=Fidži
 Countries[FK]=Falklandinsaaret
 Countries[FM]=Mikronesia
